--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
+    "react-spinners": "^0.13.8",
     "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
