--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
     "lucide-react": "^0.279.0",
-    "next": "13.5.2",
+    "next": "^14.2.24",
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18",
+    "react-dom": "18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
@@ -47,7 +47,8 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "zod": "3.21.4"
+    "zod": "3.21.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
