--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
-    "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^4.35.7",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
@@ -34,13 +33,13 @@
     "eslint-config-next": "13.5.2",
     "lucide-react": "^0.279.0",
     "next": "^14.2.24",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18",
     "react-dom": "18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
-    "react-redux": "^8.1.3",
     "react-spinners": "^0.13.8",
     "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
