--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -38,7 +38,7 @@
     "postcss": "8.4.30",
     "react": "18",
     "react-dom": "18",
-    "react-hook-form": "^7.55.0",
+    "react-hook-form": "^7.57.0",
     "react-icons": "^4.11.0",
     "react-spinners": "^0.13.8",
     "sharp": "^0.32.6",
@@ -46,7 +46,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "zod": "3.21.4",
+    "zod": "^3.25.57",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
