--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed:posts": "ts-node src/scripts/seedPosts.ts",
+    "seed:posts:simple": "ts-node src/scripts/seedPostsWithoutCloudinary.ts"
   },
   "keywords": [],
   "author": "",
