--- a/server/.env.example
+++ b/server/.env.example
@@ -12,7 +12,7 @@ PORT=8000
 NODE_ENV=development
 
 # Client URL (for CORS)
-CLIENT_URL=http://localhost:3000
+CLIENT_URL=http://localhost:3000/
 
 # Cloudinary Configuration (Required for image uploads)
 CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
